# qt_opencv_camera

./: CMakeLists.txt  README.md
src/: CameraWidget.cpp  CameraWidget.h  main.cpp
